force-app/main/default/objects/BMCServiceDesk__FAQ_Category__c/BMCServiceDesk__FAQ_Category__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for FAQs categories.</description>
    <label>FAQ Category</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>FAQ Category Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>