force-app/main/default/objects/BMCServiceDesk__FAQ_Category__c/fields/BMCServiceDesk__Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Description__c</fullName>
    <inlineHelpText>Use this field to enter a description of the FAQ category.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>