force-app/main/default/objects/BMCServiceDesk__FAQ_Category__c/fields/BMCServiceDesk__FAQ_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FAQ_Category_Name__c</fullName>
    <inlineHelpText>Use this field to enter the name of the FAQ category.</inlineHelpText>
    <label>FAQ Category</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>