force-app/main/default/objects/BMCServiceDesk__FAQ_Category__c/fields/BMCServiceDesk__Inactive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if this record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>