force-app/main/default/objects/BMCServiceDesk__FAQ_Category__c/validationRules/BMCServiceDesk__FAQ_Category_Name_Required_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__FAQ_Category_Name_Required_Rule</fullName>
    <active>true</active>
    <description>checking wheather FAQ Category Name is null</description>
    <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FAQ_Category_Name__c) , ISBLANK(BMCServiceDesk__FAQ_Category_Name__c))</errorConditionFormula>
    <errorMessage>Please enter FAQ Category.</errorMessage>
</ValidationRule>