force-app/main/default/objects/BMCServiceDesk__FAQ_Category__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__Description__c</columns>
    <columns>BMCServiceDesk__Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>